syntax = "proto3";
option go_package = "ITUDataBase/grpc/proto";

 service ITUDatabase {
   // Join the chat and receive broadcast messages via server-side streaming
   rpc joinChat(joinRequest) returns (stream broadcastMessage);

   // Publish a message to the chat rpc JoinC
   rpc publishMessage(chatMessage) returns (publishResponse);

   // Leave the chat
   rpc leaveChat(leaveRequest) returns (leaveResponse);
 }

// Request message when a client joins
message joinRequest {
  string participant_name = 1;
}

// Message for publishing chat content
message chatMessage {
  string participant_name = 1;
  string content = 2;
}

// Response after publishing a message
message publishResponse {
  bool success = 1;
  int64 lamport_timestamp = 2;
}

// Request message when a client leaves
message leaveRequest {
  string participant_name = 1;
}

// Response after leaving
message leaveResponse {
  bool success = 1;
}

// Broadcast message sent to all clients
message broadcastMessage {
  string content = 1;
  int64 lamport_timestamp = 2;
  messageType type = 3;
}

// Type of broadcast message
enum messageType {
  CHAT = 0;
  JOIN = 1;
  LEAVE = 2;
}


